Stop putting Blobs into nsITransferable when converting from DataTransfer
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect)
Tracking
()
People
(Reporter: evilpie, Assigned: evilpie)
References
(Regressed 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
I am not sure if there is something missing about blobImpl = do_QueryInterface(data);
, but it doesn't work in my testing when data is a webidl File
.
This is important for my case of supporting dragging images on Linux, because we convert the nsIInputStream
provided by the platform code to a File
in DataTransferItem::FillInExternalData
via CreateFileFromInputStream
.
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
Depends on D126617
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
I wonder why this isn't required for dragging images across processes to work on Windows.
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
If we never put a Blob
into the transferable we don't have to change any of the IPC conversion code.
Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Comment 5•3 years ago
|
||
:evilpie: since bug 1731622 is already fixed, presumably this ticket isn't relevant for it? I'm wondering because I'm trying to determine this tickets' severity and priority.
Assignee | ||
Comment 6•3 years ago
|
||
(In reply to Mirko Brodesser (:mbrodesser) from comment #5)
:evilpie: since bug 1731622 is already fixed, presumably this ticket isn't relevant for it? I'm wondering because I'm trying to determine this tickets' severity and priority.
No these issues are somewhat unrelated. With bug 1731622 fixed we aren't providing garbage data with the format application/x-moz-nativeimage
anymore on any platform. However on Linux (unlike Windows) dragging images from other programs (or Firefox instances) still doesn't work. With this bug fixed we would provide image/png
in that case on Linux.
Comment 7•3 years ago
|
||
Changing severity to S3 because this affects drag-and-drop of images for end users on Linux per comment 6.
Assignee | ||
Comment 9•3 years ago
|
||
Edgar, maybe this is something that you could look at.
Assignee | ||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment 11•2 years ago
|
||
bugherder |
Assignee | ||
Comment 12•2 years ago
|
||
Release Note Request (optional, but appreciated)
[Why is this notable]: I am obviously biased because this is something I am passionate about, but I think dragging images is not an uncommon operation. A large part of this change actually landed in bug 1437126, but only with this change does dragging images actually become reliable.
[Affects Firefox for Android]: Not really.
[Suggested wording]: Dragging images across Firefox tabs and instances is now more reliably and works with web apps like Google Drive and Photos.
[Links (documentation, blog post, etc)]:
Comment 13•2 years ago
|
||
Note added to our nightly release notes, we are keeping the relnote flag in bugzilla open so as to have it on our radar for the release, thanks!
Comment 14•2 years ago
|
||
(In reply to Tom S [:evilpie] from comment #12)
Release Note Request (optional, but appreciated)
[Why is this notable]: I am obviously biased because this is something I am passionate about, but I think dragging images is not an uncommon operation. A large part of this change actually landed in bug 1437126, but only with this change does dragging images actually become reliable.
[Affects Firefox for Android]: Not really.
[Suggested wording]: Dragging images across Firefox tabs and instances is now more reliably and works with web apps like Google Drive and Photos.
[Links (documentation, blog post, etc)]:
I guess that the release note added here is no longer valid for our final notes as we backed out bug 1812611, Tom could you confirm please? Thanks
Updated•2 years ago
|
Description
•