Bug 1732528 - Stop putting Blobs into nsITransferable when converting from DataTransfer. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D126719